--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ and portfolio </p>
 </div>
 
 <div class="section" id="contact">
-  <div class="cc-contact-information" style="background-image: url('images/map.png')">
+  <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
     <div class="container">
       <div class="cc-contact">
         <div class="row">
