--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="C:\Users\8324p\Desktop\web\images\profile1.jpeg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images\profile1.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Priyanshu Prashad</div>
         </div>
       </div>
